getAllPartners, getAllProducts features